fix: Fix PersistenceMigrationTest.loadConfigFromV24 on Java 17